--- a/research/paper/results/results-2.3.tex
+++ b/research/paper/results/results-2.3.tex
@@ -75,6 +75,7 @@ We could add a little value to this paper by investigating this a little further
 \subsection{Comparsion with FSI simulations}
  Similar trends are captured for both displacement and velocity amplitudes between QSS and FSI simulations (Fig. \ref{fig:FSI_QSS_compare}(a) and \ref{fig:FSI_QSS_compare}(b)). Quantitatively a large discrepancy (average of $30\%$) could be observed between QSS and FSI data. Therefore the power also becomes significantly low (Fig.\ref{fig:FSI_QSS_compare}(c)). However, the FSI data (Fig.\ref{fig:FSI_QSS_compare} (c)) was able to produce the main the rise and the fall of mean power as $U^*$ is increased. The reasoning behind this the fact is that galloping is weak at Re 165  and therefore fluid damping has a significant effect. It was reported by \cite{Barrero-Gil2009} that galloping only starts to occur ar Re $\geq 159$. As power is function of $(\dot{y})^2$ the error between QSS and FSI power becomes significantly large.  
  
+ Put conclusion here 
  
  
 
