Pushing after modifying fig and fig2

--- a/research/paper/main/elsarticle-template-harv.tex
+++ b/research/paper/main/elsarticle-template-harv.tex
@@ -53,7 +53,7 @@
 \usepackage{amsmath}
 \usepackage{a4wide}
 \usepackage{color}
-\usepackage{subcaption}
+%\usepackage{subcaption}
 \newcommand{\hilight}[1]{\colorbox{yellow}{#1}}
 %% The amsthm package provides extended theorem environments
 %% \usepackage{amsthm}
