pictures inside box and sub figure labels

--- a/research/paper/figure/fig2.tex
+++ b/research/paper/figure/fig2.tex
@@ -1,7 +1,8 @@
 \begin{figure}
   \setlength{\unitlength}{\textwidth}
-    \begin{picture}(1,0.52)
-    
+            \fbox{
+        \begin{picture}(1,0.52)
+
       % % % Parkinson Data 
       \put(0.025,0.27){\includegraphics[width=0.5\unitlength]{../FnP/gnuplot/velocity_amp_collapsed_parkinson.eps}}
       \put(0.495,0.27){\includegraphics[width=0.5\unitlength]{../FnP/gnuplot/velocity_amp_collapsed_re165.eps}}
@@ -22,7 +23,7 @@
       \put(0.555,0.225){\small(d)}
       
     \end{picture}
-
+}
   \caption{ Velocity amplitude and mean power  as a function of `$c$' (damping constant). (a) and (c)  are calculated using input $C_y$ data at Re=22300 obtained by \cite{Parkinson1964} and present data at three different damping ratios: $\zeta=0.0125$ (\ding{83}), $\zeta=0.015$ (\ding{116}) and $\zeta=0.0175$ (\ding{108}). (b)and (d)  are at Re=165 are calculated  from the fixed body simulations and present data from three different damping ratios: $\zeta=0.075$ ($\times$), $\zeta=0.1$ (\ding{117}) and $\zeta=0.15$ (+). The collapsed data implies that there is no frequency selection and the tuning parameter of the mechanical side of the system is the damping constant to obtain an optimum power output.}
     \label{fig:collpased_data}
 \end{figure}
