--- a/research/paper/figure/fig6.tex
+++ b/research/paper/figure/fig6.tex
@@ -1,7 +1,7 @@
 \begin{figure}
-
   \setlength{\unitlength}{\textwidth}
-  \begin{picture}(1,0.3)(0,0.8)
+  \fbox{
+  \begin{picture}(1,0.4)(0,0.8)
     
     % % %90
       \put(0.025,0.9){\includegraphics[width=0.5\unitlength]{../FnP/gnuplot/vel_time_history_60_0.075.eps}}
@@ -17,17 +17,17 @@
 % 	\put(0.56,1.02){ $\frac{V}{D}$}
  	
  	 	\put(0.25,0.88){ $\frac{tU}{D}$} 	
- 	 	\put(0.75,0.88){ $\frac{tU}{D}$}
+ 	 	\put(0.73,0.88){ $\frac{tU}{D}$}
 
 
 
-    \put(0.035,0.88){(a)}
-    \put(0.55,0.88){(b)}
+    \put(0.095,1.1){(a)}
+    \put(0.565,1.1){(b)}
    
        
 
   \end{picture}
-
+}
   \caption{Time histories of velocity at two different $\zeta$ and $U^*$ which produces same mean power ($1.2\times10^{-3}$). Data presented using QSS assumption, (a) at \ustar=60 and $\zeta=0.075$, (b) at \ustar=165 and $\zeta=0.175$ at Re=165. Shedding is present in both signals as noise but the average velocity amplitude remain constant in both cases.}
     \label{fig:time_hostory_velocity_same_power}
 \end{figure}
