--- a/research/paper/results/results-2.3.tex
+++ b/research/paper/results/results-2.3.tex
@@ -10,7 +10,7 @@
  
  \subsubsection*{Power vs $U^*$}
  
- The mean power grows, peaks and then reduces as $U^*$ is increased Fig.\ref{fig:uncollapsed_data} (e) and (f) for each value of $\zeta$. A shift of the peak power could be observed as $\zeta$ increases. However, the magnitude of the peaks remain constant for all the values of $\zeta$. A similar observation could be made from the results of \cite{Barrero-Gil2010a}. It could be observed that unlike VIV the  system has no preferred frequency. The onset of galloping and the peak power occurs at different $U^*$ at when the damping ratio is changed. The peak power remains constant regardless of $U^*$.
+ The mean power grows, peaks and then reduces as $U^*$ is increased (Fig.\ref{fig:uncollapsed_data} (e) and (f)) for each value of $\zeta$. A shift of the peak power could be observed as $\zeta$ increases. However, the magnitude of the peaks remain constant for all the values of $\zeta$. A similar observation could be made from the results of \cite{Barrero-Gil2010a}. It could be observed that unlike VIV the  system has no preferred frequency. The onset of galloping and the peak power occurs at different $U^*$ at when the damping ratio is changed. The peak power remains constant regardless of $U^*$.
  
  \subsection{Galloping response and natural frequency}
  
