--- a/research/paper/figure/fig.tex
+++ b/research/paper/figure/fig.tex
@@ -1,5 +1,6 @@
 \begin{figure}
   \setlength{\unitlength}{\textwidth}
+  \fbox{
   \begin{picture}(1,0.72)
 %(0,0.35)
     
@@ -34,10 +35,11 @@
     \put(0.095,0.225){\small(e)}
     \put(0.555,0.225){\small(f)}   
   \end{picture}
-
+}
 %  \vspace{-4cm}
   \caption{Velocity and displacement amplitude and mean power  as a function of $U^*$. (a), (c) and (e) are calculated using input $C_y$ data at Re=22300 obtained by \cite{Parkinson1964} and present data at three different damping ratios: $\zeta=0.0125$ (\ding{83}), $\zeta=0.015$ (\ding{116}) and $\zeta=0.0175$ (\ding{108}). (b),(d) and (f) are from $C_y$ data at Re=165 and are calculated  from the fixed body simulations and present data at three different  different damping ratios: $\zeta=0.075$ ($\times$), $\zeta=0.1$ (\ding{117}) and $\zeta=0.15$ (+). The multiple branches for the higher Re are due to the hysteresis between two solutions.}
   
   \label{fig:uncollapsed_data}
 \end{figure}
+
 
