--- a/research/paper/figure/fig4.tex
+++ b/research/paper/figure/fig4.tex
@@ -1,7 +1,7 @@
 \begin{figure}
-
   \setlength{\unitlength}{\textwidth}
-  \begin{picture}(1,0.5)(0,0.5)
+\fbox{
+  \begin{picture}(1,0.7)(0,0.5)
     
     % % %90
       \put(0,0.9){\includegraphics[width=0.5\unitlength]{../FnP/gnuplot/fsi_displacement.eps}}
@@ -24,14 +24,14 @@
 
 
 
-    \put(0.05,0.88){(a)}
-    \put(0.56,0.88){(b)}
-    \put(0.29,0.58){(c)}
+    \put(0.07,1.1){(a)}
+    \put(0.575,1.1){(b)}
+    \put(0.31,0.8){(c)}
    
        
 
   \end{picture}
-
+}  
   \caption{Comparison of QSS (\ding{83}) and FSI (\ding{108}) data of displacement amplitude, velocity amplitude and mean power as a function of \ustar represented by (a), (b) and (c)respectively. Data were obtained at Re=165 and $\zeta=0.075$. An average error of $34\%$ could be observed for both displacement and velocity amplitude. Essential physics i.e the rise and fall of mean power could be captured of the FSI data}
     \label{fig:FSI_QSS_compare}
 \end{figure}
