--- a/research/paper/figure/fig5.tex
+++ b/research/paper/figure/fig5.tex
@@ -1,7 +1,7 @@
 \begin{figure}
-
-  \setlength{\unitlength}{\textwidth}
-  \begin{picture}(1,0.35)(0,0.7)
+\setlength{\unitlength}{\textwidth}
+\fbox{
+  \begin{picture}(1,0.4)(0,0.75)
     
   \put(0.15,0.8){\includegraphics[width=0.7\unitlength]{../FnP/gnuplot/mean_power_collapsed_mstar.eps}}         
       
@@ -10,13 +10,13 @@
  	\put(0.11,1){\large $\frac{P_{m}}{\rho \mathcal{A}U^3 }$} 	
 
  	
- 	 	\put(0.45,0.75){ $c\rho\mathcal{A}U$} 	
+ 	 	\put(0.45,0.79){ $c\rho\mathcal{A}U$} 	
  	 
 
      
 
   \end{picture}
-
+}
   \caption{Mean power as a function of damping factor.Data are presented at $m^*=10$ (\ding{108}), $m^*=20$ (\ding{83}), $m^*=40$ (\ding{115}), $m^*=60$ (+) at Re 165 and $\zeta=0.1$. The reduction of maximum mean power could be observed when $m^*<40$}
     \label{fig:m_star_mean_power}
 \end{figure}
