--- a/research/paper/figure/fig7.tex
+++ b/research/paper/figure/fig7.tex
@@ -1,11 +1,12 @@
 \begin{figure}
 
   \setlength{\unitlength}{\textwidth}
-  \begin{picture}(1,0.3)(0,0.8)
-    
+
+  \begin{picture}(1,0.25)(0,0.8)
+  
     % % %90
-      \put(0.025,0.9){\includegraphics[width=0.5\unitlength]{../FnP/gnuplot/lift_curve_165.eps}}
-      \put(0.495,0.9){\includegraphics[width=0.5\unitlength]{../FnP/gnuplot/lift_curve_park.eps}}
+      \put(0.025,0.81){\includegraphics[width=0.5\unitlength]{../FnP/gnuplot/lift_curve_165.eps}}
+      \put(0.495,0.81){\includegraphics[width=0.5\unitlength]{../FnP/gnuplot/lift_curve_park.eps}}
      
    
 	
@@ -13,16 +14,16 @@
       
       
    
- 	\put(-0.01,1.02){ $c_y$} 	
+ 	\put(0.02,0.93){ \large $c_y$} 	
 % 	\put(0.56,1.02){ $\theta$}
  	
- 	 	\put(0.25,0.88){ $\theta$} 	
- 	 	\put(0.75,0.88){ $\theta$}
+ 	 	\put(0.25,0.8){ $\theta$} 	
+ 	 	\put(0.75,0.8){ $\theta$}
 
 
 
-    \put(0.09,0.88){(a)}
-    \put(0.56,0.88){(b)}
+    \put(0.11,1.01){(a)}
+    \put(0.58,1.01){(b)}
    
        
 
