--- a/research/paper/figure/fig4.tex
+++ b/research/paper/figure/fig4.tex
@@ -1,34 +1,23 @@
 \begin{figure}
   \setlength{\unitlength}{\textwidth}
 \fbox{
-  \begin{picture}(1,1.13)(0,0)
-    
+  \begin{picture}(1,0.25)
     % % %90
-      \put(0.0,0.78){\includegraphics[width=0.33\unitlength]{../FnP/gnuplot/fsi_displacement.eps}}
-      \put(0.32,0.78){\includegraphics[width=0.33\unitlength]{../FnP/gnuplot/fsi_velocity.eps}}
-      \put(0.70,0.78){\includegraphics[width=0.33\unitlength]{../FnP/gnuplot/fsi_power.eps}}
-     
-   
-	
-            
-      
-      
-   
- 	\put(0.25,0.98){ \large $\frac{A}{D}$} 	
- 	\put(0.25,0.62){\large $\frac{V}{D}$}
- 	\put(0.64,0.88){ $\frac{P_{m}}{\rho \mathcal{A}U^3 }$}
- 	
-% 	 	\put(0.25,0.88){ \ustar} 	
-% 	 	\put(0.8,0.88){ \ustar}
- 	 	\put(0.5,0.0){ \ustar}
+    \put(0.02,0.03){\includegraphics[width=0.3\unitlength]{../FnP/gnuplot/fsi_displacement.eps}}
+    \put(0.36,0.03){\includegraphics[width=0.3\unitlength]{../FnP/gnuplot/fsi_velocity.eps}}
+    \put(0.72,0.03){\includegraphics[width=0.3\unitlength]{../FnP/gnuplot/fsi_power.eps}}
+    
+    \put(0.00,0.17){$\displaystyle{\frac{A}{D}}$}
+    \put(0.33,0.17){$\displaystyle{\frac{V}{D}}$}
+    \put(0.65,0.17){$\displaystyle{\frac{P_{m}}{\rho \mathcal{A}U^3 }}$}
+    
+    \put(0.18,0.0){\ustar} 	
+    \put(0.51,0.0){\ustar}
+    \put(0.87,0.0){\ustar}
 
-
-
-    \put(0.36,1.1){(a)}
-    \put(0.34,0.72){(b)}
-    \put(0.34,0.34){(c)}
-   
-       
+    \put(0.08,0.22){\small(a)}
+    \put(0.41,0.22){\small(b)}
+    \put(0.77,0.22){\small(c)}
 
   \end{picture}  
 }	
