Committing small changes to figure captions

--- a/research/paper/results/results-2.3.tex
+++ b/research/paper/results/results-2.3.tex
@@ -36,7 +36,7 @@
 \begin{figure}[h!]
 \centering
 \includegraphics[width=0.5\textwidth]{../FnP/sketch_1}
-\caption{ Three key regions taken into account to analyse the time histories of power in a typical the Mean power vs. $U^*$ curve at Re 165 }
+\caption{ Three key regions taken into account to analyse the time histories of power in a typical mean power vs. $U^*$ curve at Re=165 }
 \label{fig:regions_1}
 \end{figure}
 
