renamed fig files

--- a/research/paper/Theory/mathematical_model.tex
+++ b/research/paper/Theory/mathematical_model.tex
@@ -63,7 +63,7 @@ The stationary data and the FSI data were obtained using a higher order spectral
  
  The computational domain consists of 690 quadrilateral macro elements(refer figure) where majority of the elements were concentrated near the square section. A freestream condition was given to the inlet, top and bottom boundaries and the normal velocity gradient was set to zero at the outlet. A convergence study was performed by changing the order of the polynomial ($p$-refinement) at $U^*=40$ and Re $165$. A 9th order polynomial together with a time step of $\frac{\Delta tU}{D}=0.001$ was sufficient to ensure an accuracy of $2\%$ with regards to amplitude of oscillation.  
  
-\input{../figure/fig7}
+\input{../figure/cy_vs_theta}
  
  
  
