--- a/research/paper/main/elsarticle-template-harv.tex
+++ b/research/paper/main/elsarticle-template-harv.tex
@@ -206,7 +206,7 @@
 \clearpage
 
 \bibliographystyle{elsarticle-harv}
-\bibliography{../../BibteX/Paper}
+\bibliography{../BibteX/Paper}
 
 %% Authors are advised to submit their bibtex database files. They are
 %% requested to list a bibtex style file in the manuscript if they do
