--- a/research/paper/results/results-2.3.tex
+++ b/research/paper/results/results-2.3.tex
@@ -1,6 +1,6 @@
 
 \section{Results}
-\input{../figure/fig}
+\input{../figure/uncollapsed_data}
 
 \subsection{Displacement,velocity and power output as a function of reduced velocity}
 
@@ -14,20 +14,18 @@
  
  \subsection{Galloping response and natural frequency}
  
- If the oscillator equation Eq.\eqref{final_equation_motion} is considered from a power perspective (disregarding the shedding term as the net effect is negligible !!! this should be elaborated further possibly in an earlier section as to why. I suggest when you talk about this when you discuss the shedding parameters and discuss the findings from Joel. 
- 
- Only negligible when system oscillates at natural frequency which is far from shedding frequency), it could be seen that the forcing term on RHS of the equation is only dependent on transverse velocity($\dot{y}$) which is essentially the input power of the system. On the RHS, the mechanical damping or system damping is the only term that takes out power at any instant by the product of damping force and the velocity ($P_d$). The inertia and the stiffness terms governs the frequency of the system but the forces associated by those terms are conservative forces i.e there is zero net energy in or out of the system when averaged over a period. Therefore it appears that the system is governed by the transverse velocity rather than the natural frequency.
+ If the oscillator equation Eq.\eqref{final_equation_motion} is considered from a power perspective (disregarding the shedding term as the net effect is negligible as system oscillates at natural frequency which is far from shedding frequency), it could be seen that the forcing term on RHS of the equation is only dependent on transverse velocity($\dot{y}$) which is essentially the input power of the system. On the RHS, the mechanical damping or system damping is the only term that takes out power at any instant by the product of damping force and the velocity ($P_d$). The inertia and the stiffness terms governs the frequency of the system but the forces associated by those terms are conservative forces i.e there is zero net energy in or out of the system when averaged over a period. Therefore it appears that the system is governed by the transverse velocity rather than the natural frequency.
  
 
  Using $U^*$ and $\zeta$ assumes that the system has a preferred frequency. The effect of fixing $\zeta$ and increasing $U^*$ actually decreases damping constant for a fixed free-stream velocity.($U^*=\frac{U}{f \times D}$, $\zeta= \frac{c}{2 m \omega_n}$ ). Both these effects leads to the multiple lines that are horizontally transpose when $\zeta$ is increased(Fig.\ref{fig:uncollapsed_data} (e) and (f)). Therefore the effect of $\zeta$ essentially scales up the damping coefficient for a fixed $U^*$. 
  \vspace{1cm}
  
- Therefore a single set of results for a given instantaneous lift ($C_y$) could be obtained if we were to plot displacement, velocity and power as a function of damping constant $c$ (Fig \ref{fig:velocity_collapsed}, \ref{fig:meanpower_collapsed}). A similar maximum velocity could be obtained for a given `c'. Fig.\ref{fig:same_max_vel} clearly shows the validity of this argument. 
+ Therefore a single set of results for a given instantaneous lift ($C_y$) could be obtained if we were to plot displacement, velocity and power as a function of damping constant $c$ (Fig \ref{fig:collpased_data} (a),(b),(c) and (d)). A similar maximum velocity could be obtained for a given `c'. Fig.\ref{fig:same_max_vel} clearly shows the validity of this argument. 
  
 
-\input{../figure/fig2}
+\input{../figure/collapsed_data}
  
-\input{../figure/fig6}
+\input{../figure/velocity_compare}
 
 
  
@@ -51,16 +49,16 @@ At region 3 ($U^*= 400$) `$c$' is low in comparison with region 1 and 2 which le
 
  
   
-\input{../figure/fig3}
+\input{../figure/time_histories}
  
 
 
 
 \subsection{Effect of $m^*$}
 
- \input{../figure/fig5}
+ \input{../figure/m_star_collapsed}
 
-The maximum mean power at different $m^*$ Fig.\ref{fig:power_mstar_collapsed_165} was constant beyond $m^*=30$. However, at $m^* \leq 30$ an effect of $m^*$ it could be observed that the mean power curve reduces with $m^*$. This may be due to the fact that shedding dominates as the inertia of the system is reduced.  
+The maximum mean power at different $m^*$ Fig.\ref{fig:m_star_collapsed} was constant beyond $m^*=30$. However, at $m^* \leq 30$ an effect of $m^*$ it could be observed that the mean power curve reduces with $m^*$. This may be due to the fact that shedding dominates as the inertia of the system is reduced.  
 
 !! Are you sure?? I am sure if you run cases without shedding you will still get less power. Shedding has very little influence when the galloping is sustained and the frequencies are far apart. I believe when m* is low, there is not enough inertia (stored kinetic energy in the first term of the oscillatory equation)  in the system to carry it over the cycle.
 We could add a little value to this paper by investigating this a little further since everything is already set up. Turn off shedding and run at low m*. eg. M*=1 or 2. You will get nothing. So you cannot say shedding suppresses galloping. Galloping is suppressed by low m* and if there is no galloping then all you see is the response to shedding if shedding forces are present.
@@ -70,7 +68,7 @@ We could add a little value to this paper by investigating this a little further
 
 
 
- \input{../figure/fig4}
+ \input{../figure/qss_fsi}
 
 \subsection{Comparsion with FSI simulations}
  Similar trends are captured for both displacement and velocity amplitudes between QSS and FSI simulations (Fig. \ref{fig:FSI_QSS_compare}(a) and \ref{fig:FSI_QSS_compare}(b)). Quantitatively a large discrepancy (average of $30\%$) could be observed between QSS and FSI data. Therefore the power also becomes significantly low (Fig.\ref{fig:FSI_QSS_compare}(c)). However, the FSI data (Fig.\ref{fig:FSI_QSS_compare} (c)) was able to produce the main the rise and the fall of mean power as $U^*$ is increased. The reasoning behind this the fact is that galloping is weak at Re 165  and therefore fluid damping has a significant effect. It was reported by \cite{Barrero-Gil2009} that galloping only starts to occur ar Re $\geq 159$. As power is function of $(\dot{y})^2$ the error between QSS and FSI power becomes significantly large.  
