with fig 1 caption

--- a/research/paper/results/results-2.3.tex
+++ b/research/paper/results/results-2.3.tex
@@ -58,11 +58,9 @@ At region 3 ($U^*= 400$) `$c$' is low in comparison with region 1 and 2 which le
 
  \input{../figure/m_star_collapsed}
 
-The maximum mean power at different $m^*$ Fig.\ref{fig:m_star_collapsed} was constant beyond $m^*=30$. However, at $m^* \leq 30$ an effect of $m^*$ it could be observed that the mean power curve reduces with $m^*$. This may be due to the fact that shedding dominates as the inertia of the system is reduced.  
+The maximum mean power at different $m^*$ Fig.\ref{fig:m_star_collapsed} was constant beyond $m^*=30$. However, at $m^* \leq 30$ an effect of $m^*$ it could be observed that the mean power curve reduces with $m^*$. This may be due to the fact that as the inertia of the system is reduced.  
 
-!! Are you sure?? I am sure if you run cases without shedding you will still get less power. Shedding has very little influence when the galloping is sustained and the frequencies are far apart. I believe when m* is low, there is not enough inertia (stored kinetic energy in the first term of the oscillatory equation)  in the system to carry it over the cycle.
-We could add a little value to this paper by investigating this a little further since everything is already set up. Turn off shedding and run at low m*. eg. M*=1 or 2. You will get nothing. So you cannot say shedding suppresses galloping. Galloping is suppressed by low m* and if there is no galloping then all you see is the response to shedding if shedding forces are present.
- !! 
+ 
  
  This was also reported by \cite{Joly2012} where an influence of vortex shedding was present on galloping amplitude at low mass ratios. 
 
