--- a/research/paper/Theory/mathematical_model.tex
+++ b/research/paper/Theory/mathematical_model.tex
@@ -8,7 +8,7 @@
  \begin{figure}
 \centering
 \includegraphics[width=0.5\linewidth]{../FnP/setup_1}
-\caption{}
+\caption{Induced angle of attack on the square prism due to the resultant of free-stream velocity of the fluid and transverse velocity of the body }
 \label{fig:setup_1}
 \end{figure}
 
