modified- 26-aug 3.46pm

--- a/research/paper/results/results-2.3.tex
+++ b/research/paper/results/results-2.3.tex
@@ -20,7 +20,7 @@
  Using $U^*$ and $\zeta$ assumes that the system has a preferred frequency. The effect of fixing $\zeta$ and increasing $U^*$ actually decreases damping constant for a fixed free-stream velocity.($U^*=\frac{U}{f \times D}$, $\zeta= \frac{c}{2 m \omega_n}$ ). Both these effects leads to the multiple lines that are horizontally transpose when $\zeta$ is increased(Fig.\ref{fig:uncollapsed_data} (e) and (f)). Therefore the effect of $\zeta$ essentially scales up the damping coefficient for a fixed $U^*$. 
  \vspace{1cm}
  
- Therefore a single set of results for a given instantaneous lift ($C_y$) could be obtained if we were to plot displacement, velocity and power as a function of damping constant $c$ (Fig \ref{fig:collpased_data} (a),(b),(c) and (d)). A similar maximum velocity could be obtained for a given `c'. Fig.\ref{fig:same_max_vel} clearly shows the validity of this argument. 
+ Therefore a single set of results for a given instantaneous lift ($C_y$) could be obtained if we were to plot displacement, velocity and power as a function of damping constant $c$ (Fig \ref{fig:collpased_data} (a),(b),(c) and (d)). A similar maximum velocity could be obtained for a given `c'. Fig.\ref{fig:time_hostory_velocity_same_power} clearly shows the validity of this argument. 
  
 
 \input{../figure/collapsed_data}
