uploaded 24-Aug 7.38pm malaysian time

--- a/research/paper/results/results-2.3.tex
+++ b/research/paper/results/results-2.3.tex
@@ -56,18 +56,11 @@ At region 2 ($U^*=165$) the mean power output is at its maximum. $P_t$ is not a 
 
  \input{../figure/m_star_collapsed}
 
-The maximum mean power at different $m^*$ Fig.\ref{fig:m_star_collapsed} was constant beyond $m^*=30$. However, at $m^* \leq 30$ an effect of $m^*$ it could be observed that the mean power curve reduces with $m^*$. This may be due to the fact that as the inertia of the system is reduced. Therefore galloping becomes weak.
-
-
- 
- 
- This was also reported by \cite{Joly2012} where an influence of vortex shedding was present on galloping amplitude at low mass ratios. 
-
-
+The maximum mean power at different $m^*$ Fig.\ref{fig:m_star_collapsed} was constant beyond $m^*=30$. However, at $m^* \leq 30$ an effect of $m^*$ it could be observed that the mean power curve reduces with $m^*$. This may be due to the fact that as the inertia of the system is reduced and galloping becomes weak. Therefore shedding become dominant. This was also reported by \cite{Joly2012} where vortex shedding becomes dominant when $m^*$ is reduced. 
 
  \input{../figure/qss_fsi}
 
-\subsection{Comparsion with FSI simulations}
+\subsection{Comparison with FSI simulations}
  Similar trends are captured for both displacement and velocity amplitudes between QSS and FSI simulations (Fig. \ref{fig:FSI_QSS_compare}(a) and \ref{fig:FSI_QSS_compare}(b)). Quantitatively a large discrepancy (average of $30\%$) could be observed between QSS and FSI data. Therefore the power also becomes significantly low (Fig.\ref{fig:FSI_QSS_compare}(c)). However, the FSI data (Fig.\ref{fig:FSI_QSS_compare} (c)) was able to produce the main the rise and the fall of mean power as $U^*$ is increased. The reasoning behind this the fact is that galloping is weak at Re 165  and therefore fluid damping has a significant effect. It was reported by \cite{Barrero-Gil2009} that galloping only starts to occur ar Re $\geq 159$. As power is function of $(\dot{y})^2$ the error between QSS and FSI power becomes significantly large.  
  
  Put conclusion here 
