Fixed most of the figure captions, made some suggestions, added a short cut \JL for me to put comments in the tex.

--- a/research/paper/Theory/mathematical_model.tex
+++ b/research/paper/Theory/mathematical_model.tex
@@ -8,7 +8,7 @@
  \begin{figure}
 \centering
 \includegraphics[width=0.5\linewidth]{../FnP/setup_1}
-\caption{Induced angle of attack on the square prism due to the resultant of free-stream velocity of the fluid and transverse velocity of the body }
+\caption{Induced angle of attack on the square prism due to the resultant of free-stream velocity of the fluid and transverse velocity of the body. \JL{The angle of attack $\theta$ is not marked on the figure!} }
 \label{fig:setup_1}
 \end{figure}
 
