--- a/research/paper/figure/qss_fsi.tex
+++ b/research/paper/figure/qss_fsi.tex
@@ -6,9 +6,9 @@
     \put(0.36,0.03){\includegraphics[width=0.3\unitlength]{../FnP/gnuplot/fsi_velocity.eps}}
     \put(0.72,0.03){\includegraphics[width=0.3\unitlength]{../FnP/gnuplot/fsi_power.eps}}
     
-    \put(0.00,0.17){$\displaystyle{\frac{A}{D}}$}
-    \put(0.33,0.17){$\displaystyle{\frac{V}{D}}$}
-    \put(0.65,0.17){$\displaystyle{\frac{P_{m}}{\rho \mathcal{A}U^3 }}$}
+    \put(0.03,0.17){$\frac{A}{D}$}
+    \put(0.36,0.17){$\frac{V}{D}$}
+    \put(0.68,0.17){$\frac{P_{m}}{\rho \mathcal{A}U^3 }$}
     
     \put(0.18,0.0){\ustar} 	
     \put(0.51,0.0){\ustar}
@@ -20,6 +20,6 @@
 
   \end{picture}  
 
-  \caption{Comparison of QSS (\ding{83}) and FSI (\ding{108}) data of (a) displacement amplitude, (b) velocity amplitude and (c) mean power as a function of \ustar. Data were obtained at Re=165 and $\zeta=0.075$. An average error of $34\%$ could be observed for both displacement and velocity amplitude. Essential physics i.e the rise and fall of mean power could be captured of the FSI data}
+  \caption{Comparison of data generated using the quasi-static theory (\ding{83}) and full DNS simulations (\ding{108}). (a) Displacement amplitude, (b) velocity amplitude and (c) mean power as a function of \ustar. Data were obtained at $Re=165$ and $\zeta=0.075$. An average difference of $34\%$ is observed for both displacement and velocity amplitude. However, the essential physics i.e the rise and fall of mean power, is captured by the quasi-static model.}
     \label{fig:FSI_QSS_compare}
 \end{figure}
