--- a/research/paper/figure/velocity_compare.tex
+++ b/research/paper/figure/velocity_compare.tex
@@ -16,7 +16,7 @@
 
   \end{picture}
 
-  \caption{Time histories of velocity at two different $\zeta$ and $U^*$ which produce the same mean power ($1.2\times10^{-3}$). Data presented using QSS assumption, (a) at $\ustar=60$ and $\zeta=0.075$, (b) at $\ustar=165$ and $\zeta=0.175$ at Re=165. Shedding is evident in both signals as a high frequency fluctuation but the amplitude of the slower fluctuations remains constant in both cases.}
+  \caption{Time histories of velocity at two different $\zeta$ and $U^*$ which produce the same mean power ($1.2\times10^{-3}$). Data presented using QSS assumption, (a) at $\ustar=60$ and $\zeta=0.075$, (b) at $\ustar=165$ and $\zeta=0.175$ at $Re=165$. Shedding is evident in both signals as a high frequency fluctuation but the amplitude of the slower fluctuations remains constant in both cases.}
     \label{fig:time_hostory_velocity_same_power}
 \end{figure}
 
