--- a/research/paper/main/elsarticle-template-harv.tex
+++ b/research/paper/main/elsarticle-template-harv.tex
@@ -61,6 +61,8 @@
 \newcommand\dashedrule{\mbox{\solidrule[1mm]\hspace{1mm}\solidrule[1mm]\hspace{1mm}\solidrule[1mm]\hspace{1mm}}}
 \newcommand{\ustar}{\ensuremath{U^{*}}}
 
+\newcommand{\JL}[1]{{\textcolor{red}{{\bf{\it{ **JL: #1 **}}}}}}
+
 %% The lineno packages adds line numbers. Start line numbering with
 %% \begin{linenumbers}, end it with \end{linenumbers}. Or switch it on
 %% for the whole article with \linenumbers after \end{frontmatter}.
