--- a/research/paper/figure/m_star_collapsed.tex
+++ b/research/paper/figure/m_star_collapsed.tex
@@ -17,6 +17,6 @@
 
   \end{picture}
 
-  \caption{Mean power as a function of damping factor.Data are presented at $m^*=10$ (\ding{108}), $m^*=20$ (\ding{83}), $m^*=40$ (\ding{115}), $m^*=60$ (+) at Re 165 and $\zeta=0.1$. The reduction of maximum mean power could be observed when $m^*<40$}
+  \caption{Mean power as a function of damping factor. Data are presented at $m^*=10$ (\ding{108}), $m^*=20$ (\ding{83}), $m^*=40$ (\ding{115}), $m^*=60$ (+) at Re 165 and $\zeta=0.1$. A reduction of maximum mean power can be observed when $m^*<40$. For $m^*>40$, the maximum power is essentially independent of $m^*$.}
     \label{fig:m_star_collapsed}
 \end{figure}
