--- a/research/paper/results/results-2.3.tex
+++ b/research/paper/results/results-2.3.tex
@@ -34,7 +34,7 @@
 \begin{figure}[h!]
 \centering
 \includegraphics[width=0.5\textwidth]{../FnP/sketch_1}
-\caption{ Three key regions taken into account to analyse the time histories of power in a typical mean power vs. $U^*$ curve at Re=165 }
+\caption{ Three key regions taken into account to analyse the time histories of power in a typical mean power vs. $U^*$ curve at $Re=165$. In region 1, high damping suppresses oscillation, hence the power output is low. In region 2, the damping is close to the optimum for power transfer. In region 3, the low damping means little energy is extracted from the fluid.}
 \label{fig:regions_1}
 \end{figure}
 
