--- a/research/paper/main/elsarticle-template-harv.tex
+++ b/research/paper/main/elsarticle-template-harv.tex
@@ -60,7 +60,7 @@
 \newcommand\solidrule[1][1cm]{\rule[0.5ex]{#1}{1pt}}
 \newcommand\dashedrule{\mbox{\solidrule[1mm]\hspace{1mm}\solidrule[1mm]\hspace{1mm}\solidrule[1mm]\hspace{1mm}}}
 \newcommand{\ustar}{\ensuremath{U^{*}}}
-
+\newcommand{\Tan}[1]{{\textcolor{blue}{{\bf{\it{ **Tan: #1 **}}}}}}
 \newcommand{\JL}[1]{{\textcolor{red}{{\bf{\it{ **JL: #1 **}}}}}}
 
 %% The lineno packages adds line numbers. Start line numbering with
