--- a/research/paper/nomenclature.tex
+++ b/research/paper/nomenclature.tex
@@ -4,6 +4,7 @@
 
 \begin{tabular}{ll}
 $a_1,a_3,a_5,a_7$ & coefficients of the polynomial to determine $C_y$ \\ 
+$C_y$ & instantaneous lift
 $F_y$ & force due to $C_y$  \\ 
 $\rho$ & fluid density  \\
 $m$ & mass of the body \\
