added pdf output

--- a/research/paper/figure/coefficient-table.tex
+++ b/research/paper/figure/coefficient-table.tex
@@ -15,7 +15,7 @@ Re=22300 & 2.69 & 168 & 1670 & 59900 \\ [1ex] % [1ex] adds vertical space
 \hline %inserts single line
 \end{tabular}
 
-\caption{Coefficient values used in the 7th order interpolation polynomial for high ($Re=165$) and low ($Re=22300$) Reynolds numbers.}
+\caption{Coefficient values used in the 7th order interpolation polynomial for high ($Re=165$) and low ($Re=22300$) Reynolds numbers. These data are used as input data to calculate the RHS of Eq.\ref{final_equation_motion} throughout this study.}
  
 \label{table:nonlin} % is used to refer this table in the text
 \end{center}
