--- a/research/paper/figure/collapsed_data.tex
+++ b/research/paper/figure/collapsed_data.tex
@@ -24,7 +24,7 @@
       
     \end{picture}
 
-  \caption{ Velocity amplitude and mean power as a function of the damping factor. (a) and (c)  are calculated using input $C_y$ data at $Re=22300$ obtained by \cite{Parkinson1964} at three different damping ratios: $\zeta=0.0125$ (\ding{83}), $\zeta=0.015$ (\ding{116}) and $\zeta=0.0175$ (\ding{108}). (b)and (d)  are at $Re=165$ are calculated from the fixed body simulations at three different damping ratios: $\zeta=0.075$ ($\times$), $\zeta=0.1$ (\ding{117}) and $\zeta=0.15$ (+). The collapsed data implies that there is no frequency selection and the tuning parameter of the mechanical side of the system is the damping constant to obtain an optimum power output.}
+  \caption{ Velocity amplitude and mean power as a function of the damping factor. Data presented in (a) and (c)  are calculated using input data at $Re=22300$ obtained by \cite{Parkinson1964} at three different damping ratios: $\zeta=0.0125$ (\ding{83}), $\zeta=0.015$ (\ding{116}) and $\zeta=0.0175$ (\ding{108}). Data presented in (b)and (d)  are obtained using input data at $Re=165$ at three different damping ratios: $\zeta=0.075$ ($\times$), $\zeta=0.1$ (\ding{117}) and $\zeta=0.15$ (+). The collapsed data implies that there is no frequency selection and the tuning parameter of the mechanical side of the system is the damping constant to obtain an optimum power output.}
     \label{fig:collpased_data}
 \end{figure}
 
