--- a/research/paper/figure/uncollapsed_data.tex
+++ b/research/paper/figure/uncollapsed_data.tex
@@ -37,7 +37,7 @@
   \end{picture}
 
 %  \vspace{-4cm}
-  \caption{Velocity and displacement amplitude and mean power  as a function of $U^*$. (a), (c) and (e) are calculated using input $C_y$ data at $Re=22300$ obtained by \cite{Parkinson1964} at three different damping ratios: $\zeta=0.0125$ (\ding{83}), $\zeta=0.015$ (\ding{116}) and $\zeta=0.0175$ (\ding{108}). (b),(d) and (f) are from $C_y$ data at $Re=165$ and are calculated  from the fixed body simulations at three different  different damping ratios: $\zeta=0.075$ ($\times$), $\zeta=0.1$ (\ding{117}) and $\zeta=0.15$ (+). The multiple branches for the higher Re are due to the hysteresis between two solutions.}
+  \caption{Velocity, displacement amplitude and mean power  as a function of $U^*$. Data presented in (a), (c) and (e) are calculated using input data at $Re=22300$ obtained by \cite{Parkinson1964} at three different damping ratios: $\zeta=0.0125$ (\ding{83}), $\zeta=0.015$ (\ding{116}) and $\zeta=0.0175$ (\ding{108}). Data presented in (b),(d) and (f) are obtained using input data at $Re=165$ at three different damping ratios: $\zeta=0.075$ ($\times$), $\zeta=0.1$ (\ding{117}) and $\zeta=0.15$ (+). The multiple branches for the higher Re are due to the hysteresis between two solutions.}
   
   \label{fig:uncollapsed_data}
 \end{figure}
