--- a/research/paper/Theory/mathematical_model.tex
+++ b/research/paper/Theory/mathematical_model.tex
@@ -5,13 +5,7 @@
 
  One of the widely used mathematical model to predict the system response under galloping is the Quasi-steady state (QSS) model, incorporated by \cite{Parkinson1964} for a square cross section. The equation of motion of the body under galloping is given by Eq. \eqref{equationofmotion}. The forcing term $F_y$ is given by Eq.\eqref{lift equation}.
  
- \begin{figure}
-\centering
-\includegraphics[width=0.5\linewidth]{../FnP/setup_1}
-\caption{Induced angle of attack on the square prism due to the resultant of free-stream velocity of the fluid and transverse velocity of the body. \JL{The angle of attack $\theta$ is not marked on the figure!} }
-\label{fig:setup_1}
-\end{figure}
-
+ \input{../figure/sketch-1}
 
 \begin{equation}
 \label{equationofmotion}
