some corrections- until subsection "parameters used "

--- a/research/paper/nomenclature.tex
+++ b/research/paper/nomenclature.tex
@@ -11,6 +11,8 @@ $m$ & mass of the body \\
 $m_a$ & added mass \\
 $c$ & damping constant/damping factor \\
 $k$ & spring constant \\
+$U_i$ & induced velocity \\
+$\theta$ & induced angle of incidence \\
 $U$ & freestram velocity \\
 $y,\dot{y},\ddot{y}$ & transverse displacement,velocity and acceleration   \\
 $A$ & displacement amplitude\\
