--- a/research/paper/nomenclature.tex
+++ b/research/paper/nomenclature.tex
@@ -13,8 +13,8 @@ $c$ & damping constant/damping factor \\
 $k$ & spring constant \\
 $U_i$ & induced velocity \\
 $\theta$ & induced angle of incidence \\
-$U$ & freestram velocity \\
-$y,\dot{y},\ddot{y}$ & transverse displacement,velocity and acceleration   \\
+$U$ & freestream velocity \\
+$y,\dot{y},\ddot{y}$ & transverse displacement, velocity and acceleration   \\
 $A$ & displacement amplitude\\
 $\mathcal{A}$ & cross sectional area\\ 
 $F_0$& force due to shedding \\
